repos and services to ZIO

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 db-config {
   username = sigil
   password = harold
-  url = localhost
+  url = "jdbc:postgresql://localhost:5432/sigil"
 }
 
 api-config {
