--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,15 +1,9 @@
-akka{
-  actor{
-    provider = cluster
-  }
-
-  debug {
-    unhandled = on
-  }
-}
-
-dbConfig {
+db-config {
   username = sigil
   password = harold
-  host = localhost
+  url = "jdbc:postgresql://localhost:5432/sigil"
+}
+
+api-config {
+  port = 4444
 }
